force-app/main/default/objects/CventEvents__EventSharingRule__c/CventEvents__EventSharingRule__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration for the programmatic events sharing.</description>
    <label>Event Sharing Rule</label>
    <nameField>
        <displayFormat>ESR-{00000000}</displayFormat>
        <label>Event Sharing Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Sharing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>