force-app/main/default/objects/CventEvents__EventSharingRule__c/fields/CventEvents__GroupId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__GroupId__c</fullName>
    <description>Stores the Id of the auxiliary public group which is created in order to incorporate the users.</description>
    <inlineHelpText>Stores the Id of the auxiliary public group which is created in order to incorporate the users.</inlineHelpText>
    <label>Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>