force-app/main/default/objects/CventEvents__EventSharingRule__c/fields/CventEvents__GroupIds__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__GroupIds__c</fullName>
    <description>Stores the Ids of the groups to share the events with.</description>
    <inlineHelpText>Stores the Ids of the groups to share the events with.</inlineHelpText>
    <label>Group Ids</label>
    <length>100</length>
    <type>Text</type>
</CustomField>