force-app/main/default/objects/CventEvents__EventSharingRule__c/fields/CventEvents__Title__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Title__c</fullName>
    <description>Stores the title of the Event Sharing Rule.</description>
    <inlineHelpText>Stores the title of the Event Sharing Rule.</inlineHelpText>
    <label>Title</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>