force-app/main/default/objects/CventEvents__EventSharingRule__c/fields/CventEvents__UserIds__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__UserIds__c</fullName>
    <description>Stores the Ids of the users to share the events with.</description>
    <inlineHelpText>Stores the Ids of the users to share the events with.</inlineHelpText>
    <label>User Ids</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>